<resources>
    <string name="app_name">Boluda Course Tracker</string>
    <string name="boluda_com">BOLUDA.COM</string>
    <string name="developed_by_dovaldev_com">Developed by DovalDev.com</string>
    <string name="content_description_media">Imagen en tarjeta</string>
    <string name="title">Titulo Tarjeta</string>
    <string name="secondary_text">Texto de la tarjeta</string>
    <string name="supporting_text">Información adicional de la tarjeta</string>
    <string name="action_1">Ver</string>
    <string name="menu_recargar_cursos">Instalar Cursos-OP2</string>
    <string name="menu_recargar_cursos_v2">Instalar Cursos</string>
    <string name="menu_buscar">Buscar</string>
    <string name="dialog_realizando_una_accion">Realizando una acción</string>
    <string name="dialog_msg_instalando_los_cursos">Instalando los cursos…</string>
    <string name="dialog_msg_instalando_los_cursos_title">Hola, estamos…</string>
    <string name="dialog_msg_descargando_los_cursos">Descargando, instalando y actualizando los cursos, se que el tiempo es dinero pero tendrás que esperar…</string>
    <string name="dialog_msg_descargando_los_cursos_title">Hola, estamos…</string>
    <string name="action_2">Marcar Visto</string>
    <string name="menu_intranet">Intranet</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_wordpress_tutorial">Tutorial Wordpress</string>
    <string name="menu_ir_a">Ir a…</string>
    <string name="chapter_watched_yes">VISTO</string>
    <string name="chapter_watched_no">NO VISTO</string>
    <string name="menu_cursos_favoritos">Cursos favoritos</string>
    <string name="curse_chapter_course_name">Course Name</string>
    <string name="action_bar_search">Buscar un curso</string>
    <string name="action_bar_search_chapter">Buscar un curso o capítulo</string>
    <string name="dialog_obtaining">Obteniendo</string>
    <string name="dialog_obtaining_msg">Información de la base de datos, favoritos y capítulos vistos…</string>
    <string name="dialog_updating">Actualizando</string>
    <string name="dialog_updating_msg">Información de la base de datos, favoritos y capítulos vistos…</string>
    <string name="toast_all_data_updated">Todos los datos se han actualizado correctamente…</string>
    <string name="dialog_msg_install">¿Quieres instalar y/o actualizar los cursos?</string>
    <string name="dialog_msg_install_ok">Instalar</string>
    <string name="dialog_msg_install_cancel">Cancelar</string>
    <string name="course_list_lista_completa">Lista Completa</string>
    <string name="course_list_lista_fav">Lista Favoritos</string>
    <string name="text_time_00_00">00:00</string>
    <string name="dialog_time_lapse_donde_te_has_quedado">¿DONDE TE HAS QUEDADO?</string>
    <string name="dialog_time_lapse_min_hint"> MIN </string>
    <string name="dialog_time_lapse_sec_hint"> SEG </string>
    <string name="dialog_time_lapse_separator">:</string>
    <string name="dialog_time_lapse_seconds">SEGUNDOS</string>
    <string name="dialog_time_lapse_minutes">MINUTOS</string>
    <string name="toast_updated_time">Se ha actualizado el tiempo de visionado!</string>
    <string name="dialog_btn_reset">Reiniciar</string>
    <string name="toast_reset_time">Se ha reseteado el tiempo del capítulo!</string>
</resources>