<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_buscar"
        android:id="@+id/action_course_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_fav"
        android:title="@string/menu_cursos_favoritos"
        android:icon="@drawable/ic_fav_white"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_ir_a"
        android:title="@string/menu_ir_a"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reload_courses_v2"
        android:title="@string/menu_recargar_cursos_v2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reload_courses"
        android:title="@string/menu_recargar_cursos"
        app:showAsAction="never"/>

</menu>